--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css?family=Great+Vibes:300,400" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400" rel="stylesheet">
   <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
-  <link rel="stylesheet" href="style/style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -44,7 +44,7 @@
       </p>
     </div>
     <div class="six">
-      <img src="img/d.jpg" alt="" class="lydia-dp" id="imagePath" height="500" style="height: 500px;">
+      <img src="d.jpg" alt="" class="lydia-dp" id="imagePath" height="500" style="height: 500px;">
       <div class="wish">
         <h3 class="wish-hbd" style="font-family: Work Sans, sans-serif;">Happy Birthday!</h3>
         <h5 id="wishText">I hope your Birthday will always be as beautiful and full of love as you are. You deserve only the best, and I will always wish that for you Happy Birthday Adeboye Dorcas Boluwatife 🎈🎈🎈🎈🎈🎈🎈 ! <span style="font-family: Work Sans, sans-serif;">😘🥰😍</span></h5>
@@ -52,39 +52,39 @@
     </div>
     <div class="seven">
       <div class="baloons">
-        <img src="img/ballon2.svg" alt="">
-        <img src="img/ballon1.svg" alt="">
-        <img src="img/ballon3.svg" alt="">
-        <img src="img/ballon1.svg" alt="">
-        <img src="img/ballon2.svg" alt="">
-        <img src="img/ballon3.svg" alt="">
-        <img src="img/ballon2.svg" alt="">
-        <img src="img/ballon3.svg" alt="">
-        <img src="img/ballon1.svg" alt="">
-        <img src="img/ballon2.svg" alt="">
-        <img src="img/ballon3.svg" alt="">
-        <img src="img/ballon2.svg" alt="">
-        <img src="img/ballon1.svg" alt="">
-        <img src="img/ballon3.svg" alt="">
-        <img src="img/ballon2.svg" alt="">
-        <img src="img/ballon3.svg" alt="">
-        <img src="img/ballon1.svg" alt="">
-        <img src="img/ballon2.svg" alt="">
-        <img src="img/ballon1.svg" alt="">
-        <img src="img/ballon3.svg" alt="">
-        <img src="img/ballon3.svg" alt="">
-        <img src="img/ballon1.svg" alt="">
-        <img src="img/ballon2.svg" alt="">
-        <img src="img/ballon3.svg" alt="">
-        <img src="img/ballon2.svg" alt="">
-        <img src="img/ballon1.svg" alt="">
-        <img src="img/ballon3.svg" alt="">
-        <img src="img/ballon2.svg" alt="">
-        <img src="img/ballon3.svg" alt="">
-        <img src="img/ballon1.svg" alt="">
-        <img src="img/ballon2.svg" alt="">
-        <img src="img/ballon1.svg" alt="">
-        <img src="img/ballon3.svg" alt="">
+        <img src="ballon2.svg" alt="">
+        <img src="ballon1.svg" alt="">
+        <img src="ballon3.svg" alt="">
+        <img src="ballon1.svg" alt="">
+        <img src="ballon2.svg" alt="">
+        <img src="ballon3.svg" alt="">
+        <img src="ballon2.svg" alt="">
+        <img src="ballon3.svg" alt="">
+        <img src="ballon1.svg" alt="">
+        <img src="ballon2.svg" alt="">
+        <img src="ballon3.svg" alt="">
+        <img src="ballon2.svg" alt="">
+        <img src="ballon1.svg" alt="">
+        <img src="ballon3.svg" alt="">
+        <img src="ballon2.svg" alt="">
+        <img src="ballon3.svg" alt="">
+        <img src="ballon1.svg" alt="">
+        <img src="ballon2.svg" alt="">
+        <img src="ballon1.svg" alt="">
+        <img src="ballon3.svg" alt="">
+        <img src="ballon3.svg" alt="">
+        <img src="ballon1.svg" alt="">
+        <img src="ballon2.svg" alt="">
+        <img src="ballon3.svg" alt="">
+        <img src="ballon2.svg" alt="">
+        <img src="ballon1.svg" alt="">
+        <img src="ballon3.svg" alt="">
+        <img src="ballon2.svg" alt="">
+        <img src="ballon3.svg" alt="">
+        <img src="ballon1.svg" alt="">
+        <img src="ballon2.svg" alt="">
+        <img src="ballon1.svg" alt="">
+        <img src="ballon3.svg" alt="">
       </div>
     </div>
     <div class="eight">
@@ -125,6 +125,6 @@
 </body>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js"></script>
-<script type="application/javascript" src="script/main.js"></script>
+<script type="application/javascript" src="main.js"></script>
 
 </html>
